# cpp-logger

./: .gitignore  CMakeLists.txt  README.md  log.txt  main.cc
include/: logger.hpp
